--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
     "jwt-decode": "^3.1.2",
+    "jwt-token": "^1.0.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
