--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
+    "googleapis": "^107.0.0",
     "jwt-decode": "^3.1.2",
     "jwt-token": "^1.0.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
     "react-password-strength-bar": "^0.4.1",
     "react-redux": "^8.0.2",
@@ -27,7 +27,8 @@
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2",
     "wavesurfer.js": "^6.2.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.1.1"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=src react-scripts start",
