--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_REST_API_IP=54.180.85.13
+REACT_APP_REST_API_IP=www.ericportpolio.com
 REACT_APP_KAKAO_REST_API_KEY=b438e7876d8007740cfe4be5853fa084
 REACT_APP_GOOGLE_CLIENT_ID=882438443179-98udge22gfqpadjihk5vv8npoubabth1.apps.googleusercontent.com
