--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jwt-token": "^1.0.9",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -25,6 +26,8 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
     "shortid": "^2.2.16",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2",
     "web-vitals": "^2.1.0",
