--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "browser-image-compression": "^2.0.0",
     "cross-env": "^7.0.3",
     "googleapis": "^107.0.0",
     "jwt-decode": "^3.1.2",
