--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_REST_API_IP=3.37.61.247
+REACT_APP_REST_API_IP=ericportpolio.com
 REACT_APP_GOOGLE_ANALYTICS_TRACKING_ID=UA-235617274-1
 REACT_APP_KAKAO_REST_API_KEY=b438e7876d8007740cfe4be5853fa084
 REACT_APP_GOOGLE_CLIENT_ID=882438443179-98udge22gfqpadjihk5vv8npoubabth1.apps.googleusercontent.com
