--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "axios": "^0.27.2",
     "browser-image-compression": "^2.0.0",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.5",
     "googleapis": "^107.0.0",
     "jwt-decode": "^3.1.2",
     "jwt-token": "^1.0.9",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
