--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-modal": "^3.13.1",
+    "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "browser-image-compression": "^2.0.0",
     "cross-env": "^7.0.3",
@@ -30,8 +34,9 @@
     "shortid": "^2.2.16",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
-    "styled-components": "^5.3.5",
+    "styled-components": "^5.3.6",
     "styled-reset": "^4.4.2",
+    "typescript": "^4.8.4",
     "web-vitals": "^2.1.0",
     "zustand": "^4.1.1"
   },
