--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-modal": "^3.13.1",
+    "@types/react-slick": "^0.23.10",
+    "@types/shortid": "^0.0.29",
     "@types/sockjs-client": "^1.5.1",
     "@types/stompjs": "^2.3.5",
     "@types/styled-components": "^5.1.26",
